--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "This is Namaste react by akshay Saini ",
   "scripts": {
+    "start" : "parcel index.html",
+    "build" : "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -24,6 +26,6 @@
     "react-dom": "^19.1.1"
   },
   "browserslist": [
-    "last two  version"
+    "last 2 versions"
   ]
 }
